--- a/src/css/index.css
+++ b/src/css/index.css
@@ -806,3 +806,11 @@ footer .copyright {
     padding: 0 30px;
   }
 }
+
+footer .copyright2 {
+  padding: 10px 0;
+  width: 100%;
+  color: #eee;
+  text-align: center;
+  font-size: 14px;
+}
